Disable folders in IMAP and cached IMAP accounts as destination for a folder move to avoid loosing all messages in the subfolders when moving nested folders.

Moving to a local destination folder works correct.

This is only a workaround for the real problem which is
addressed by a patch. It was aggreed on not applying the
patch to the KDE 3.5 branch before it's been tested by
more people.
BUG:114985

svn path=/branches/KDE/3.5/kdepim/; revision=487310